--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "year-of-rat",
-  "version": "1.0.2",
-  "description": "Check if is year of Rat",
+  "name": "year-of-rabbit",
+  "version": "1.0.3",
+  "description": "Check if is year of Rabbit",
   "main": "index.js",
   "scripts": {
     "test": "node test"
@@ -11,7 +11,7 @@
     "year-of",
     "chinese",
     "zodiac",
-    "rat",
+    "rabbit",
     "ox",
     "tiger",
     "rabbit",
