--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "year-of-rabbit",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Check if is year of Rabbit",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,10 @@
     "pig"
   ],
   "author": "Robert Chang <cht8687@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cht8687/year-of-rabbit.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "tape": "^4.6.0"
