--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "year-of-rabbit",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Check if is year of Rabbit",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "year-of",
     "chinese",
     "zodiac",
-    "rabbit",
+    "rat",
     "ox",
     "tiger",
     "rabbit",
